# rudis

./: Cargo.toml  README.md
.github/workflows/: lint-and-tests.yml
rudis-core/: Cargo.toml
rudis-core/src/: cmd_parser.rs  command.rs  lib.rs  sorted_set.rs  test_utils.rs
rudis-core/src/commands/: append.rs  command.rs  copy.rs  dbsize.rs  decr.rs  decrby.rs  del.rs  echo.rs  exists.rs  flushall.rs  flushdb.rs  get.rs  getbit.rs  getdel.rs  getrange.rs  getset.rs  hdel.rs  hexists.rs  hget.rs  hgetall.rs  hincrby.rs  hincrbyfloat.rs  hkeys.rs  hlen.rs  hmget.rs  hset.rs  hstrlen.rs  hvals.rs  incr.rs  incrby.rs  incrbyfloat.rs  keys.rs  lindex.rs  llen.rs  lolwut.rs  lpop.rs  lpush.rs  lrange.rs  mget.rs  mod.rs  (+38 more)
rudis-server/: Cargo.toml
rudis-server/src/: async_pipe.rs  cmd_parser.rs  main.rs
src/: cmd_parser.rs  command.rs  lib.rs  main.rs  sorted_set.rs  test_utils.rs
src/commands/: _type.rs  acl.rs  append.rs  asking.rs  auth.rs  bgrewriteaof.rs  bgsave.rs  bitcount.rs  bitfield.rs  bitfield_ro.rs  bitop.rs  bitpos.rs  blmove.rs  blmpop.rs  blpop.rs  brpop.rs  brpoplpush.rs  bzmpop.rs  bzpopmax.rs  bzpopmin.rs  client.rs  cluster.rs  command.rs  config.rs  copy.rs  dbsize.rs  debug.rs  decr.rs  decrby.rs  del.rs  discard.rs  dump.rs  echo.rs  eval.rs  eval_ro.rs  evalsha.rs  evalsha_ro.rs  exec.rs  exists.rs  expire.rs  (+203 more)
tests/: compatability-suite.rs
tools/: add-cmd.py  gencmd.py  unimplemented-cmds.py
