[package]
name = 'rudis-server'
description = 'The Rudis server, a Redis-compatible database in Rust'
version = '0.1.0'
edition = '2021'

[dependencies]
anyhow = { workspace = true }
rudis = { workspace = true }
macro_rules_attribute = '0.2'
smol = '2'
smol-macros = '0.1'
clap = { version = "4.5.21", features = ["derive"] }
